# dinoco

./: .gitignore  Cargo.toml  LICENSE  crates.md  items.txt  readme.md  v0.0.1-pr-overview.md
.github/: FUNDING.yml
__old/: readme.md
__old/etanol_compiler/: Cargo.toml
_dinoco_engine/: Cargo.toml
_dinoco_engine/src/: error.rs  traits.rs
_helpers/: DOCUMENTACAO_DINOCO.md  dinoco_dx_orm.rs  dinoco_full_example.rs  dinoco_query_builder.rs  new_doc.md  pest.md
dinoco/: Cargo.toml
dinoco/src/: _models.rs  cache.rs  data.rs  execution.rs  fields.rs  ids.rs  lib.rs  model.rs  queue.rs
dinoco/src/methods/: count.rs  delete.rs  delete_many.rs  find_and_update.rs  find_first.rs  find_many.rs  insert_into.rs  insert_many.rs  mod.rs  update.rs  update_many.rs
dinoco/tests/: adapters_crud.rs  adapters_relations.rs  include_limits.rs  relation_counts.rs  sqlite_flow.rs  ui.rs
dinoco/tests/common/: mod.rs
dinoco/tests/ui/: common.rs
dinoco/tests/ui/fail/: cond_wrong_scalar_type.rs  cond_wrong_scalar_type.stderr  delete_without_cond.stderr  extend_unknown_field.stderr  extend_wrong_type.stderr  type_safe_find_wrong_projection.stderr  type_safe_insert_wrong_model.stderr  type_safe_update_wrong_model.stderr
dinoco/tests/ui/pass/: cond_field_type_safe.rs  type_safe_crud_valid.rs
dinoco_cli/: Cargo.toml
dinoco_cli/src/: main.rs  utils.rs
dinoco_cli/src/commands/: _database_import.rs  database_import.rs  init.rs  migrate_create.rs  mod.rs
dinoco_cli/src/commands/database/: mod.rs  reset.rs
dinoco_cli/src/commands/helpers/: database.rs  mod.rs
dinoco_cli/src/commands/migrate/: generate.rs  mod.rs  rollback.rs  run.rs
dinoco_cli/src/commands/models/: generate.rs
dinoco_cli/src/commands/schema/: mod.rs  restore.rs
dinoco_cli/src/helpers/: database.rs  encoders.rs  migrations.rs  mod.rs
dinoco_cli/tests/: cli.rs  migration_history.rs
dinoco_codegen/: Cargo.toml
dinoco_codegen/src/: lib.rs
dinoco_codegen/src/dinoco/: enums.rs  mod.rs  render.rs  structs.rs
dinoco_codegen/src/models/: helpers.rs  mod.rs  relations.rs  render_dinoco.rs  render_enums.rs  render_models.rs
dinoco_codegen/tests/: generate_models.rs
dinoco_compiler/: Cargo.toml  schema.dinoco  schema.pest
dinoco_compiler/src/: ast.rs  lib.rs  main.rs  parsed_ast.rs  parser.rs  validator.rs
dinoco_compiler/tests/: compile.rs
dinoco_derives/: Cargo.toml
dinoco_derives/src/: extend.rs  lib.rs  rowable.rs  shared.rs
dinoco_docs/: .gitignore  Cargo.toml  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  tuono.config.ts
dinoco_docs/.next/: prerender-manifest.json  trace
dinoco_docs/.tuono/: index.html  main.rs  routeTree.gen.ts  (+1 more)
dinoco_engine/: Cargo.toml  example.rs
dinoco_engine/src/: cache.rs  config.rs  data.rs  error.rs  lib.rs  main.rs  planner.rs  traits.rs  value.rs
dinoco_engine/src/databases/: mod.rs  mysql.rs  postgresql.rs  sqlite.rs
dinoco_engine/src/databases/mysql/: dialect.rs  handler.rs  migration.rs  mod.rs  row.rs
dinoco_engine/src/databases/postgresql/: dialect.rs  handler.rs  migration.rs  mod.rs  row.rs
dinoco_engine/src/databases/sqlite/: dialect.rs  handler.rs  migration.rs  mod.rs  row.rs
dinoco_engine/src/helpers/: data.rs  migration.rs  mod.rs  planner.rs
dinoco_engine/src/migration/: ____a.rs  differ.rs  mapper.rs  migration_sql.rs  mod.rs  sql.rs  step.rs
dinoco_engine/src/query/: data.rs  delete.rs  helpers.rs  insert.rs  mod.rs  select.rs  update.rs
dinoco_engine/src/sql/: alter_table.rs  create_enum.rs  create_index.rs  create_table.rs  data.rs  drop_enum.rs  drop_index.rs  drop_table.rs  helpers.rs  mod.rs  select.rs
dinoco_engine/src/sql/query/: delete.rs  insert.rs  mod.rs  select.rs
dinoco_engine/src/sql/schema/_enum/: alter_enum.rs  create_enum.rs  drop_enum.rs  mod.rs
dinoco_engine/src/sql/schema/index/: create_index.rs  drop_index.rs
dinoco_engine/src/sql/schema/table/: alter_table.rs  create_table.rs  drop_table.rs
dinoco_engine/tests/: adapter_constraints.rs  migrations.rs  query_builder.rs  window_functions.rs
dinoco_engine/tests/common/: mod.rs
dinoco_formatter/: Cargo.toml  schema.dinoco
dinoco_formatter/src/: _enum.rs  config.rs  lib.rs  main.rs  table.rs  utils.rs
dinoco_formatter/tests/: format.rs
dinoco_macros/: Cargo.toml  schema.dinoco
dinoco_query/: Cargo.toml
dinoco_tests/: Cargo.toml
dinoco_tests/tests/dinoco/: adapters_crud.rs  adapters_relations.rs  cache.rs  include_limits.rs  queue.rs  relation_counts.rs  sqlite_flow.rs  ui.rs
dinoco_tests/tests/dinoco/common/: mod.rs
dinoco_tests/tests/dinoco/ui/: common.rs
dinoco_tests/tests/dinoco/ui/fail/: cond_wrong_scalar_type.stderr  delete_without_cond.rs  delete_without_cond.stderr  extend_unknown_field.rs  extend_unknown_field.stderr  extend_wrong_type.rs  extend_wrong_type.stderr  type_safe_find_wrong_projection.rs  type_safe_find_wrong_projection.stderr  type_safe_insert_wrong_model.rs  type_safe_insert_wrong_model.stderr  type_safe_insert_wrong_projection.rs  type_safe_insert_wrong_projection.stderr  type_safe_update_wrong_model.rs  type_safe_update_wrong_model.stderr  type_safe_update_wrong_projection.rs  type_safe_update_wrong_projection.stderr
dinoco_tests/tests/dinoco/ui/pass/: extend_valid.rs  type_safe_crud_valid.rs
dinoco_tests/tests/dinoco_cli/: cli.rs  migration_history.rs
dinoco_tests/tests/dinoco_codegen/: generate_models.rs
dinoco_tests/tests/dinoco_compiler/: compile.rs
dinoco_tests/tests/dinoco_engine/: adapter_constraints.rs  config.rs  migrations.rs  query_builder.rs  window_functions.rs
dinoco_tests/tests/dinoco_engine/common/: mod.rs
dinoco_tests/tests/dinoco_formatter/: format.rs
dinoco_vscode/: .gitignore  .vscodeignore  Cargo.toml  LICENSE.md  README.md  package.json  tsconfig.json
dinoco_vscode/configs/: dinoco.tmLanguage.json  language-configuration.json
dinoco_vscode/scripts/: build-binaries.mjs
dinoco_vscode/src/: extension.ts  main.rs
etanol_compiler/: Cargo.toml  gerado.pest  schema.etanol  schema.pest
etanol_vscode/: .vscodeignore  Cargo.toml  package.json
(+1336 files in other folders)
