[package]
name = "dinoco"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dinoco_derives = { path = "../dinoco_derives" }
dinoco_engine = { path = "../dinoco_engine" }
dotenvy = "0.15.7"
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
trybuild = "1.0.112"
