[package]
name = "dinoco"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "A modern Rust ORM for schema-driven queries, migrations, and database operations."
homepage = "https://docs.dinoco.io"
repository = "https://github.com/dinoco-rs/dinoco"
readme = "../crates.md"
keywords = ["orm", "database", "sql", "migrations", "rust"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
dinoco_derives = { path = "../dinoco_derives", version = "0.0.1" }
dinoco_engine = { path = "../dinoco_engine", version = "0.0.1" }
dotenvy = "0.15.7"
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.18.1", features = ["v7"] }
