[package]
name = "dinoco_codegen"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Code generation utilities for Dinoco models and typed Rust client output."
homepage = "https://docs.dinoco.io"
repository = "https://github.com/dinoco-rs/dinoco"
readme = "../crates.md"
keywords = ["orm", "codegen", "models", "database", "rust"]

[dependencies]
dinoco_compiler = { path = "../dinoco_compiler" }
