[package]
name = "dinoco_engine"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.16", features = ["with-serde_json-1"] }

deadpool-sqlite = "0.13"
deadpool-postgres = "0.14.1"

rusqlite = "0.38"
mysql_async = "0.36.1"

async-trait = "0.1.89"
async-stream = "0.3.6"
futures = "0.3.32"
chrono = "0.4.44"
serde = "1.0.228"
serde_json = "1.0.149"

dinoco_compiler = { path = "../dinoco_compiler" }
dinoco_derives = { path = "../dinoco_derives" }
