[package]
name = "dinoco_tests"
version = "0.0.1"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Integration and compile-time test suite covering Dinoco crates and workflows."
homepage = "https://docs.dinoco.io"
repository = "https://github.com/dinoco-rs/dinoco"
readme = "../crates.md"
keywords = ["orm", "testing", "integration", "database", "compile-time"]

[dependencies]
bincode = "1.3.3"
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1.1"
deadpool-postgres = "0.14.1"
deadpool-sqlite = "0.13"
dinoco = { path = "../dinoco", version = "0.0.1" }
dinoco_codegen = { path = "../dinoco_codegen", version = "0.0.1" }
dinoco_compiler = { path = "../dinoco_compiler", version = "0.0.1" }
dinoco_derives = { path = "../dinoco_derives", version = "0.0.1" }
dinoco_engine = { path = "../dinoco_engine", version = "0.0.1" }
dinoco_formatter = { path = "../dinoco_formatter", version = "0.0.1" }
dotenvy = "0.15.7"
futures = "0.3.32"
indicatif = "0.18.4"
inquire = "0.9.4"
mysql_async = "0.36.1"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.16", features = ["with-serde_json-1", "with-chrono-0_4"] }

[dev-dependencies]
tempfile = "3.23.0"
trybuild = "1.0.112"
uuid = { version = "1.18.1", features = ["v7"] }

[[bin]]
name = "dinoco_cli"
path = "../dinoco_cli/src/main.rs"

[[test]]
name = "dinoco_adapters_crud"
path = "tests/dinoco/adapters_crud.rs"

[[test]]
name = "dinoco_adapters_relations"
path = "tests/dinoco/adapters_relations.rs"

[[test]]
name = "dinoco_cache"
path = "tests/dinoco/cache.rs"

[[test]]
name = "dinoco_include_limits"
path = "tests/dinoco/include_limits.rs"

[[test]]
name = "dinoco_relation_counts"
path = "tests/dinoco/relation_counts.rs"

[[test]]
name = "dinoco_sqlite_flow"
path = "tests/dinoco/sqlite_flow.rs"

[[test]]
name = "dinoco_ui"
path = "tests/dinoco/ui.rs"

[[test]]
name = "dinoco_cli_cli"
path = "tests/dinoco_cli/cli.rs"

[[test]]
name = "dinoco_cli_migration_history"
path = "tests/dinoco_cli/migration_history.rs"

[[test]]
name = "dinoco_codegen_generate_models"
path = "tests/dinoco_codegen/generate_models.rs"

[[test]]
name = "dinoco_compiler_compile"
path = "tests/dinoco_compiler/compile.rs"

[[test]]
name = "dinoco_engine_adapter_constraints"
path = "tests/dinoco_engine/adapter_constraints.rs"

[[test]]
name = "dinoco_engine_config"
path = "tests/dinoco_engine/config.rs"

[[test]]
name = "dinoco_engine_migrations"
path = "tests/dinoco_engine/migrations.rs"

[[test]]
name = "dinoco_engine_query_builder"
path = "tests/dinoco_engine/query_builder.rs"

[[test]]
name = "dinoco_engine_window_functions"
path = "tests/dinoco_engine/window_functions.rs"

[[test]]
name = "dinoco_formatter_format"
path = "tests/dinoco_formatter/format.rs"
