[package]
name = "dinoco_vscode"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
dashmap = "5.5"
tower-lsp = "0.20"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }

dinoco_compiler = { path = "../dinoco_compiler" }
dinoco_formatter = { path = "../dinoco_formatter" }
