[package]
name = "etanol_compiler"
version = "0.2.0"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
readme = "../crates.md"
description = "A compiler for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["orm", "compiler", "cli", "etanol"]

[lib]
name = "etanol_compiler"
path = "src/lib.rs"

[dependencies]
diacritics = "0.1.1"
regex = "1.5.5"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
